--- a/src/html/common/css.html
+++ b/src/html/common/css.html
@@ -1,2 +1,2 @@
-<link rel="stylesheet" href="/dist/css/common.min.css" />
-<link rel="stylesheet" href="/dist/css/ui_bookmark.min.css" />
+<link rel="stylesheet" href="./dist/css/common.min.css" />
+<link rel="stylesheet" href="./dist/css/ui_bookmark.min.css" />
