--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<!--[if IE 8 ]><html class="ie8 ie no-js" lang="ko"> <![endif]-->
-<!--[if IE 9 ]><html class="ie9 ie no-js" lang="ko"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js" lang="ko"> <!--<![endif]-->
+<html class="no-js" lang="ko">
 <head>
 	<include src="common/meta.html"></include>
 	<title>UI 개발자를 위한 즐겨찾기</title>
 	<include src="common/google.html"></include>
 	<include src="common/css.html"></include>
-	<include src="common/ie9.html"></include>
 </head>
 <body>
 	<!-- Google Tag Manager (noscript) -->
@@ -47,8 +44,8 @@
 		<include src="common/footer.html"></include>
 	</div>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="/dist/js/libs/plugins.min.js"></script>
-	<script src="/dist/js/ui.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="./dist/js/libs/plugins.min.js"></script>
+	<script src="./dist/js/ui.min.js"></script>
 </body>
 </html>
