안내문구 및 경로 수정

--- a/src/html/common/footer.html
+++ b/src/html/common/footer.html
@@ -1,12 +1,9 @@
 <footer role="contentinfo">
 	<section class="footer-wrap">
 		<ul>
-			<li class="copy">&copy; <span class="last" id="footerYear"></span> UI Developer's bookmark.</li>
-			<li><a href="./about">About</a></li>
-			<li> <a href="mailto:bookmark@singihae.com?subject=즐겨찾기 피드백">피드백(Feedback)</a></li>
+			<li class="copy">&copy; 2017 ~ <span class="last" id="footerYear"></span> UI Developer's bookmark.</li>
+			<li> <a href="https://github.com/buppagi/ui-dev-bookmarks/issues" target="_blank"><strong>피드백(Feedback)</strong></a></li>
 		</ul>
-		<div class="footer-home-wrap">
-			<a href="http://uidev.link">UI Developer's bookmark.</a>
-		</div>
+		<div class="footer-home-wrap">UI Developer's bookmark.</div>
 	</section>
 </footer>
