--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
 	<!-- Google Tag Manager (noscript) -->
-	<noscript>
-		<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PLRXCSJ" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-	</noscript>
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W6Z84X6" height="0" width="0"
+			style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 	<div id="wrap">
 		<header id="header">
@@ -24,14 +23,14 @@
 				<a class="desktop" href="./"><span class="name">UI Developer</span> <span class="point">Links</span></a>
 				<a class="tablet-mobile" href="./"><i class="fa fa-home" aria-hidden="true"></i></a>
 			</h1>
-			<nav class="menu button-group filters-button-group" id="navi">
+			<article class="menu button-group filters-button-group" id="navi">
 				<input type="checkbox" class="menu-open" name="menuOpen" id="menuOpen" />
 				<label class="menu-open-button" for="menuOpen" aria-checked="false">
 					<span class="hamburger hamburger-1"></span>
 					<span class="hamburger hamburger-2"></span>
 					<span class="hamburger hamburger-3"></span>
 				</label>
-			</nav>
+			</article>
 		</header>
 		<section id="container">
 			<div class="contents">
